--- a/css/style.css
+++ b/css/style.css
@@ -69,12 +69,13 @@
     margin: 50px;
 }
 
-.background-text {
-    position: absolute; 
-    top: 50px; 
-    left: 50px;
-    width: 350px; 
-    height: 350px; 
+.spinner {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 450px;
+    height: 450px;
     z-index: 10;
 }
 
@@ -105,3 +106,4 @@ text {
     font-family: Georgia, serif;
     font-size: 21px;
 }
+
